--- a/src/pages/Home/components/FeatureSet/FeatureContainer/FeatureContainer.module.css
+++ b/src/pages/Home/components/FeatureSet/FeatureContainer/FeatureContainer.module.css
@@ -52,6 +52,15 @@
   font-family: 'Inter', sans-serif;
   line-height: 1.2;
   letter-spacing: -0.02em;
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+}
+
+.icon {
+  font-size: 1.75rem;
+  line-height: 1;
+  flex-shrink: 0;
 }
 
 .bulletList {
@@ -134,6 +143,10 @@
     font-size: 1.5rem;
   }
 
+  .icon {
+    font-size: 1.5rem;
+  }
+
   .bulletItem {
     font-size: 1rem;
   }
@@ -194,6 +207,11 @@
   .heading {
     font-size: 1.375rem;
     text-align: center;
+    justify-content: center;
+  }
+
+  .icon {
+    font-size: 1.375rem;
   }
 
   .bulletList {
@@ -224,6 +242,10 @@
   }
 
   .heading {
+    font-size: 1.25rem;
+  }
+
+  .icon {
     font-size: 1.25rem;
   }
 
