--- a/src/pages/Home/components/FeatureSet/FeatureContainer/FeatureContainer.module.css
+++ b/src/pages/Home/components/FeatureSet/FeatureContainer/FeatureContainer.module.css
@@ -153,7 +153,7 @@
   border-left: 2px solid var(--teal-rgba-30);
   border-right: 2px solid var(--teal-rgba-30);
   border-bottom: 2px solid var(--teal-rgba-30);
-  border-top: none;
+  border-top: 2px solid var(--teal-rgba-30);
   border-radius: 0 0 16px 16px;
   overflow: hidden;
   max-height: 0;
